package aaa;

option java_outer_classname = "CustomOuterClassName";

enum Eac {
  FOO2 = 1;
}
